--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -259,6 +259,7 @@ MSG_ERR_CannotAddForm=Form cannot be added to itself.
 CTL_InspectorTitle=Component Inspector
 ACS_ComponentTree=Component tree
 ACSD_ComponentTree=N/A
+HINT_ComponentInspector=Component Inspector
 
 # formatting of title of window which is displayed instead of form window when the
 # form loading fails
