--- a/form/src/org/netbeans/modules/form/layoutsupport/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/layoutsupport/Bundle.properties
@@ -54,6 +54,7 @@ VALUE_anchor_south=South
 VALUE_anchor_southwest=Southwest
 VALUE_anchor_west=West
 VALUE_anchor_northwest=Northwest
+ACSD_GridBagCustomizer=N/A
 
 # GridBagLayout customizer
 CTL_GBC_anchorPanel=Anchor
