--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -29,10 +29,20 @@ CTL_SelectionModeHint=Form Editor is in \"Selection Mode\" - you may select comp
 CTL_ConnectionModeHint=Form Editor is in \"Connection Mode\" - you may connect components with a wizard.
 CTL_AddModeHint=Form Editor is in \"Add Mode\" - you may add the selected bean to the form.
 
+ACSD_SelectionMode=If selected, Form Editor is in \"Selection Mode\" - you may select components on the form.
+ACSD_ConnectionMode=If selected, Form Editor is in \"Connection Mode\" - you may connect components with a wizard.
+ACSD_AddMode=If selected, Form Editor is in \"Add Mode\" - you may add the selected bean to the form.
+
 CTL_NewCategory=Palette Category
 CTL_NewCategoryTitle=New Palette Category
 CTL_NewCategoryName=New Category Name:
 CTL_NewCategoryValue=Category
+
+ACS_PaletteTabbedPane=Component palette categories
+ACSD_PaletteTabbedPane=N/A
+ACS_PaletteBeansList=List of components
+ACSD_PaletteBeansList=N/A
+HINT_PaletteComponent=Component Palette
 
 # context menu on control part of Component Palette
 CTL_ShowPalette=Show Palette
