Fixed nbm targets. Added support for xml-include-entities.

--- a/editor/build.xml
+++ b/editor/build.xml
@@ -80,7 +80,7 @@ Microsystems, Inc. All Rights Reserved.
              topdir="."
              module="netbeans/modules/editor.jar"
 	     homepage="http://editor.${homepage.base}/"
-	     distribution="http://{dist.base}/editor.nbm">
+	     distribution="http://${dist.base}/editor.nbm">
       <license file="${license.file}"/>
       <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
     </makenbm>
