Local variables tooltips refined...

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -630,9 +630,9 @@ MSG_JC_CustomCreationCodeDesc=Custom code for creation of this component.
 #added by Derrick Oswald
 MSG_JC_UseLocalVar=Use Local Variable
 #added by Derrick Oswald
-MSG_JC_UseLocalVarDesc=If True, the variable is local to initComponents().
+MSG_JC_UseLocalVarDesc=If True, the variable is declared as local in initComponents().
 #added by Derrick Oswald
-HINT_VARIABLES_LOCAL=The localness of variables generated for components on the form.
+HINT_VARIABLES_LOCAL=If True, variables for components are generated as local in initComponents().
 #added by Derrick Oswald
 PROP_VARIABLES_LOCAL=Local Variables
 
