Bugfix of #18782 In Fonts&Colors dialog, one mnemonics is used twice

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -784,7 +784,7 @@ ACSD_CEP_FgTrans=
 CEP_BgTitle=\ Background Color 
 ACSD_CEP_Bg=
 CEP_BgTrans=\ Inherit
-CEP_BgTrans_Mnemonic=H
+CEP_BgTrans_Mnemonic=E
 ACSD_CEP_BgTrans=
 CEP_PreviewTitle=\ Preview 
 ACSN_CEP_Preview=Color Preview
