Minor editorial updates to the tooltips for annotation properties.

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -926,13 +926,13 @@ ATN_AnnotationTypesNode_Description=All registered annotation types
 PROP_AT_HIGHLIGHT=Highlight Color
 HINT_AT_HIGHLIGHT=Color of the background highlight.
 PROP_AT_USE_HIGHLIGHT=Use Highlight Color
-HINT_AT_USE_HIGHLIGHT=Whether or not the highlight color is used.
+HINT_AT_USE_HIGHLIGHT=If True, the highlight color is used.
 PROP_AT_FOREGROUND=Foreground Color
 HINT_AT_FOREGROUND=Color of the text.
 PROP_AT_INHERIT_FOREGROUND=Inherit Foreground Colors
-HINT_AT_INHERIT_FOREGROUND=Whether or not the foreground color is used.
+HINT_AT_INHERIT_FOREGROUND=If True, the foreground color is used.
 PROP_AT_WHOLELINE=Whole Line
-HINT_AT_WHOLELINE=Whether or not this annotation type is whole line annotation type.
+HINT_AT_WHOLELINE=If True, this annotation type is whole line annotation type.
 ERR_NoContentTypeDefined =KitClass {0} has not defined method getContentType(). It should not be displayed as node in Editor Settings.
 
 PROP_backgroundDrawing=Draw Glyphs on Background
@@ -940,8 +940,8 @@ HINT_backgroundDrawing=If True, annotation glyphs that are covered by another an
 PROP_backgroundGlyphAlpha=Glyph Icon Alpha
 HINT_backgroundGlyphAlpha=Percentage of alpha value for the glyph icons that are drawn on the background.
 PROP_combineGlyphs=Combining of Annotations
-HINT_combineGlyphs=Whether or not the combining of annotations is allowed.
+HINT_combineGlyphs=If True, annotation glyphs can be combined.
 PROP_glyphsOverLineNumbers=Draw Glyph Over Line Numbers
-HINT_glyphsOverLineNumbers=Whether or not the glyph icons can be drawn over the line numbers.
+HINT_glyphsOverLineNumbers=If True, glyph icons can be drawn over the line numbers.
 PROP_showGlyphGutter=Always Show Glyph Margin
 HINT_showGlyphGutter=Show glyph margin even when there are no annotations.
