IN=4610 HTTP Monitor: Need to add [...] button to data tables

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -226,6 +226,9 @@ MON_Value_Mnemonic=V
 MON_Edit=Edit
 MON_Edit_dots=Edit...
 MON_Editing=Editing
+MON_ParamValue=View Value
+MON_DisplayValue=View this attribute 
+MON_EditAttribute=Edit this attribute
 
 ACS_MON_NameA11yDesc=Name
 ACS_MON_NameTextFieldA11yName=Name
@@ -233,6 +236,9 @@ ACS_MON_NameTextFieldA11yDesc=Name
 ACS_MON_ValueA11yDesc=Value
 ACS_MON_ValueTextAreaA11yName=Value
 ACS_MON_ValueTextAreaA11yDesc=Value
+ACS_MON_ParamValueA11yDesc=View Value
+ACS_MON_ParamValueTextAreaA11yName=View Value
+ACS_MON_ParamValueTextAreaA11yDesc=View Value
 
 # Headers
 MON_HTTP_Headers=HTTP headers
