IN=4723 - MON: messages should use the word "record" instead of "transaction"

--- a/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
+++ b/web.monitor/src/org/netbeans/modules/web/monitor/client/Bundle.properties
@@ -10,18 +10,18 @@
 # Microsystems, Inc. All Rights Reserved.
 
 MON_All_1=All
-MON_All_transactions_2=All transactions
+MON_All_transactions_2=All Records
 MON_Cancel=Cancel
 MON_Cancel_Mnemonic=C
 MON_Client_3=Client
 MON_Client_3_Mnemonic=C
 MON_Cookies_4=Cookies
 MON_Could_not_5=Could not create GUI component for HTTP Monitor
-MON_Current_Transactions_7=Current Transactions
+MON_Current_Transactions_7=Current Records
 MON_Delete_8=Delete
-MON_Delete_all_9=Delete all transactions
-MON_Delete_current_10=Delete current transactions
-MON_Delete_saved_11=Delete saved transactions
+MON_Delete_all_9=Delete all records
+MON_Delete_current_10=Delete current records
+MON_Delete_saved_11=Delete saved records
 MON_Display_12=Display
 MON_HTTP_Transaction_13=HTTP &Monitor
 MON_OK=OK
@@ -36,12 +36,12 @@ MON_Request_19_Mnemonic=R
 MON_Header_19=Headers
 MON_Save_20=Save
 MON_Save_action_21=Save action failed
-MON_Saved_Transactions_22=Saved Transactions
+MON_Saved_Transactions_22=Saved Records
 MON_Servlet_23=Servlet and Server
 MON_Session_24=Session
 MON_Show_time_25=Show/Hide time stamp
-MON_Transaction_data_26=Transaction data display
-MON_Transactions_27=HTTP request records
+MON_Transaction_data_26=HTTP Monitor records data display
+MON_Transactions_27=HTTP Monitor records
 MON_info_title=HTTP Monitor Message
 MON_no_server=To view data, the JSP/Servlet executor must be running
 MON_Title=HTTP Monitor
@@ -143,28 +143,28 @@ MON_this_session=Expires at the end of this browser session
 # Session
 
 MON_Session_invalidated=The session was destroyed during this request
-MON_Session_created=The session was created during this transaction
-MON_Session_existed=The session existed before this transaction
+MON_Session_created=The session was created as a result of this request
+MON_Session_existed=The session existed before this request
 MON_Session_properties=Session properties
 MON_Session_properties_Mnemonic=E
 
-MON_Session_att_after=Session attributes after the transaction
+MON_Session_att_after=Session attributes after the request 
 MON_Session_att_after_Mnemonic=A
-MON_Session_att_before=Session attributes before the transaction
+MON_Session_att_before=Session attributes before the request
 MON_Session_att_before_Mnemonic=B
 
 ACS_MON_Session_propertiesA11yDesc=Session properties.
 ACS_MON_Session_propertiesTableA11yName=Session Properties
 ACS_MON_Session_propertiesTableA11yDesc=Session properties.
-ACS_MON_Session_att_afterA11yDesc=Session attributes after the transaction.
-ACS_MON_Session_att_afterTableA11yName=Session Attributes After The Transaction
-ACS_MON_Session_att_afterTableA11yDesc=Session attributes after the transaction.
-ACS_MON_Session_att_beforeA11yDesc=Session attributes before the transaction.
-ACS_MON_Session_att_beforeTableA11yName=Session Attributes Before The Transaction
-ACS_MON_Session_att_beforeTableA11yDesc=Session attributes before the transaction.
+ACS_MON_Session_att_afterA11yDesc=Session attributes after the request
+ACS_MON_Session_att_afterTableA11yName=Session Attributes After The Request
+ACS_MON_Session_att_afterTableA11yDesc=Session attributes after the request
+ACS_MON_Session_att_beforeA11yDesc=Session attributes before the request
+ACS_MON_Session_att_beforeTableA11yName=Session Attributes Before The Request
+ACS_MON_Session_att_beforeTableA11yDesc=Session attributes before the request
 
-MON_Session_no_att_before=Session attributes before the transaction: none
-MON_Session_no_att_after=Session attributes after the transaction: none
+MON_Session_no_att_before=Session attributes before the request: none
+MON_Session_no_att_after=Session attributes after the request: none
 MON_No_session=No session existed or was created
 MON_Session_ID=Session ID
 MON_Created=Created
@@ -307,28 +307,28 @@ MON_Confirm_Delete_Headers=Confirm deletion of the following headers:
 MON_Confirm_Delete_Params=Confirm deletion of the following parameters:
 MON_Confirmation_Required=Confirmation required
 
-MON_Send=Send transaction
+MON_Send=Send HTTP request
 MON_Send_Mnemonic=S
 
-ACS_MON_SendA11yDesc=Send transaction
+ACS_MON_SendA11yDesc=Send HTTP request
 
 #
 # REPLAY
 #
 #{0} exception
-MON_Replay.ConnectionWarning=Got ConnectException attempting to replay transaction\n   {0}\n\
+MON_Replay.ConnectionWarning=Got ConnectException attempting to replay request\n   {0}\n\
   Be sure your web module is running on a server, \n\
-  and if necessary, replay the transaction on the \n\
+  and if necessary, replay the request on the \n\
   correct server using Edit and Replay. 
 
 #{0} exception
-MON_Replay.IOExceptionWarning=Got IOException attempting to replay transaction\n   {0}
+MON_Replay.IOExceptionWarning=Got IOException attempting to replay request\n   {0}
 #{0} exception
-MON_Replay.OtherExceptionWarning=Got Exception attempting to replay transaction\n   {0}
+MON_Replay.OtherExceptionWarning=Got Exception attempting to replay request\n   {0}
 MON_WarningMsgTitle=Monitor Warning
 
-MON_Bad_input=Could not parse transaction record input
-MON_Write_bad=IOException when writing transaction record
+MON_Bad_input=Could not parse monitor record
+MON_Write_bad=IOException when writing monitor record
 MON_No_document=No document had been set for this node
 
 #
@@ -342,7 +342,7 @@ MON_ParamEditor_Input_required=Input missing
 # No server dialog
 #
 MON_NoServer=The HTTP monitor requires the internal HTTP server to be running in order to receive data from the execution web server
-MON_CantReplay=The HTTP monitor requires the internal HTTP server to be running in order to replay transactions
+MON_CantReplay=The HTTP monitor requires the internal HTTP server to be running in order to replay requests
 MON_NoServerTitle=Internal HTTP server not running
 
 #NOI18N
