One more small editorial change to an annotation property name.

--- a/editor/src/org/netbeans/modules/editor/options/Bundle.properties
+++ b/editor/src/org/netbeans/modules/editor/options/Bundle.properties
@@ -939,7 +939,7 @@ PROP_backgroundDrawing=Draw Glyphs on Background
 HINT_backgroundDrawing=If True, annotation glyphs that are covered by another annotation glyph are drawn on the background under the Source Editor text.
 PROP_backgroundGlyphAlpha=Glyph Icon Alpha
 HINT_backgroundGlyphAlpha=Percentage of alpha value for the glyph icons that are drawn on the background.
-PROP_combineGlyphs=Combining of Annotations
+PROP_combineGlyphs=Combine Annotations
 HINT_combineGlyphs=If True, annotation glyphs can be combined.
 PROP_glyphsOverLineNumbers=Draw Glyph Over Line Numbers
 HINT_glyphsOverLineNumbers=If True, glyph icons can be drawn over the line numbers.
