--- a/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
+++ b/beans/src/org/netbeans/modules/beans/beaninfo/Bundle.properties
@@ -44,6 +44,8 @@ CTL_OpenDialogName=Open Image File
 CTL_FileSystemName=File &System
 CTL_Icon_not_exists=Image class path for {0} is not valid.
 
+ACS_IconPanelA11yName=Icon Editor Panel
+ACS_IconPanelA11yDesc=Icon editor.
 ACS_ClasspathA11yDesc=Select this option to specify classpath to the icon image.
 ACS_ClasspathExampleA11yDesc=(e.g. /org/netbeans/resources/action.gif)
 ACS_NoPictureA11yDesc=Select this option to use no icon image.
