--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -10,6 +10,13 @@
 # Microsystems, Inc. All Rights Reserved.
 
 
+#manifest's description entries
+OpenIDE-Module-Name=JPDA Debugger
+OpenIDE-Module-Display-Category=Debugging
+OpenIDE-Module-Short-Description=Enables debugging with the JPDA debugger implementation.
+OpenIDE-Module-Long-Description=The JPDA Debugger module enables you to debug applications using the Java Platform Debugging Architecture.
+OpenIDE-Module-Package-Dependency-Message=The JPDA Debugger Module requires the jpda.jar files from Sun's distribution of JPDA to be installed as Java extensions. You can download JPDA from http://java.sun.com/products/jpda/. See the JPDA Debugger documentation for more information.
+
 #this value is used in Add Breakpoint dialog in combo Debugger Type
 CTL_Java_breakpoint_events_cathegory_name=Java
 
