--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -40,8 +40,9 @@ CTL_NewCategoryValue=Category
 
 ACS_PaletteTabbedPane=Component palette categories
 ACSD_PaletteTabbedPane=N/A
-ACS_PaletteBeansList=List of components
-ACSD_PaletteBeansList=N/A
+# {0} - category name
+ACS_PaletteBeansList={0}
+ACSD_PaletteBeansList=List of components
 HINT_PaletteComponent=Component Palette
 
 # context menu on control part of Component Palette
